auth is updated